# ShadowML

./: README.md  plot_iris_dtc.ipynb  proof.json  receipt.json
frontend/: index.html  package-lock.json  package.json
frontend/abi/: MLModelMarketplace.ts
frontend/contracts/src/: MLModelMarkelplace.sol
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Button.tsx  HowItWorks.tsx  Layout.tsx  ModelCard.tsx  VerificationBadge.tsx
frontend/src/pages/: DashboardPage.tsx  ExplorePage.tsx  LandingPage.tsx  LoginPage.tsx  ModelDetailsPage.tsx  UploadPage.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
zkVerify/app/: package-lock.json  package.json
zkVerify/app/src/: app.js  attestation.json  prof.json  proof.json  server.js
